# rubikrypt

./: .gitignore  README.md  pyproject.toml  test_main.py
rubikrypt/: main.py
